--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,47 @@
 .DS_Store
+
+# Virtual environments
 .venv/
+venv/
+env/
+ENV/
+ENV.bak/
+venv.bak/
+/bin/
+/include/
+/lib/
+/lib64/
+
+# Python cache and compiled files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
 build/
 dist/
+.eggs/
+pip-wheel-metadata/
+*.egg-info/
+
+# Test and coverage reports
+.pytest_cache/
+.coverage
+.coverage.*
+htmlcov/
+coverage.xml
+
+# Static type checker and lint caches
+.mypy_cache/
+.pylint.d/
+
+# Robot Framework output
 output.xml
 report.html
 log.html
-*.pyc
 *-screenshot-*.png
-*\$py.class
+
+# IDE and editor files
+.vscode/
+.idea/
 *.swp
-*__pycache__
-/bin
-/include
-/lib
-*egg-info
