--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
+# macOS system files
 .DS_Store
+.AppleDouble
+.LSOverride
+._*
+__MACOSX/
+.DocumentRevisions-V100/
+.fseventsd/
+.Spotlight-V100/
+.TemporaryItems/
+.Trashes/
+.AppleDB/
+.AppleDesktop/
+Network Trash Folder/
+Temporary Items/
+.apdisk
 
 # Virtual environments
 .venv/
